add navigation and background

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="utf-8">
     <title>Melzitup</title>
 
+    <!-- Link to our style.css file -->
     <link rel="stylesheet" href="css/style.css"
 
+    <!-- Link to Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/hbl5zip.css">
+
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="images/logo.png" class="logo" alt="Melzitup Logo"
+
+      <div class="container">
+        <nav>
+          <ul>
+            <li><a class="current" href="index.html">Home</a></li>
+            <li><a href="index.html">About</a></li>
+            <li><a href="index.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="model">
+      </div>
+      <div class="rapper">
+      </div>
+      <div class="chef">
+      </div>
+    </header>
+  </body>
 </html>
