add welcome content

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   </head>
   <body>
+
     <header>
       <img src="images/logo.png" class="logo" alt="Melzitup Logo"
 
@@ -24,12 +25,29 @@
           </ul>
         </nav>
       </div>
-      <div class="model">
-      </div>
-      <div class="rapper">
-      </div>
-      <div class="chef">
-      </div>
     </header>
+
+    <main>
+      <section>
+        <h1 class="welcome">Welcome!</h1>
+        <p class="welcome">Welcome to Melzitup! This site was designed by myself to display three specific things that I enjoy, and actually have talent for. The kicker is that these are things I am not very public about, so you're kind of getting a sneak peek, so enjoy!</p>
+
+        <img src="images/hero.png" class="hero" alt="Hero Image"
+      </section>
+
+      <section>
+      <div class="wrapper">
+      </div>
+
+      <p class="container">
+      </p>
+
+      <div class="container">
+      </div>
+
+      <div class="contain">
+      </div>
+      </section>
+    </main>
   </body>
 </html>
