add images and titles

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
   <body>
 
     <header>
-      <img src="images/logo.png" class="logo" alt="Melzitup Logo"
+      <img src="images/logo.png" class="logo" alt="Melzitup Logo" />
+      <img src="images/bolt.png" class="blink" alt="lightning bolt" />
 
       <div class="container">
         <nav>
           <ul>
-            <li><a class="current" href="index.html">Home</a></li>
-            <li><a href="index.html">About</a></li>
+            <li><a href="index.html">The Model</a></li>
+            <li><a href="index.html">The Rapper</a></li>
+            <li><a href="index.html">The Chef</a></li>
             <li><a href="index.html">Contact</a></li>
           </ul>
         </nav>
@@ -32,21 +34,24 @@
         <h1 class="welcome">Welcome!</h1>
         <p class="welcome">Welcome to Melzitup! This site was designed by myself to display three specific things that I enjoy, and actually have talent for. The kicker is that these are things I am not very public about, so you're kind of getting a sneak peek, so enjoy!</p>
 
-        <img src="images/hero.png" class="hero" alt="Hero Image"
-      </section>
+        <img src="images/hero.png" class="hero" alt="Hero Image" />
 
-      <section>
-      <div class="wrapper">
-      </div>
+        <div class="wrapper">
+        </div>
+        <div class="box">
+          <h2 class="box-title">View</h2>
+          <img src="images/model.png" class="model" alt="Hero Image" />
 
-      <p class="container">
-      </p>
+        </div>
+        <div class="box">
+          <h2 class="box-title">Listen</h2>
+          <img src="images/rapper.png" class="rapper" alt="Hero Image" />
 
-      <div class="container">
-      </div>
-
-      <div class="contain">
-      </div>
+        </div>
+        <div class="box">
+          <h2 class="box-title">Taste</h2>
+          <img src="images/chef.png" class="chef" alt="Hero Image" />
+        </div>
       </section>
     </main>
   </body>
