add animation to nav

--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
     <!-- Link to Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/hbl5zip.css">
 
+    <!-- Link to animation -->
+
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
+
   </head>
   <body>
 
     <header>
-      <img src="images/logo.png" class="logo" alt="Melzitup Logo" />
-      <img src="images/bolt.png" class="blink" alt="lightning bolt" />
+      <img src="images/logo.png" class="logo animate__animated animate__zoomInDown" alt="Melzitup Logo" />
+      <img src="images/bolt.png" class="animate__animated animate__heartBeat blink" alt="lightning bolt" />
 
       <div class="container">
         <nav>
