add span in welcome

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Melzitup</title>
 
     <!-- Link to our style.css file -->
-    <link rel="stylesheet" href="css/style.css"
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- Link to Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/hbl5zip.css">
@@ -22,7 +22,7 @@
 
     <header>
       <img src="images/logo.png" class="logo animate__animated animate__zoomInDown" alt="Melzitup Logo" />
-      <img src="images/bolt.png" class="animate__animated animate__heartBeat blink" alt="lightning bolt" />
+      <img src="images/bolt.png" class="bolt animate__animated animate__heartBeat" alt="lightning bolt" />
 
       <div class="container">
         <nav>
@@ -38,8 +38,9 @@
 
     <main>
       <section>
-        <h1 class="welcome">Welcome!</h1>
-        <p class="welcome">Welcome to Melzitup! This site was designed by myself to display three specific things that I enjoy, and actually have talent for. The kicker is that these are things I am not very public about, so you're kind of getting a sneak peek, so enjoy!</p>
+        <h1 class="welcome first">Welcome!</h1>
+        <p class="welcome">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.<br> <span class="important">- Melz</span></p>
+
 
         <img src="images/hero.png" class="hero" alt="Hero Image" />
 
