--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="welcome-intro">
           <div class="welcome-content">
             <h1 class="welcome first">Welcome!</h1>
-            <p class="welcome">Thank you for visiting my site. This site is an untraditional portfolio, sharing three areas of intrest that I have. These interests are: rapping, cooking, and modeling. Feel free to explore the site and get an inside look at the somewhat hidden aspects of me. Enjoy!<br> <span class="important">- Melz</span></p>
+            <p class="welcome">Thank you for visiting my site. This site is an untraditional portfolio, sharing three areas of intrest that I have, that I am not as vocal about in my life. These interests are: rapping, cooking, and modeling. Feel free to explore the site and get an inside look at these somewhat hidden aspects of me. Enjoy!<br> <span class="signature">- Melz</span></p>
           </div>
 
           <img src="images/hero.png" class="hero" alt="Hero Image" />
@@ -53,18 +53,18 @@
       <div class="wrapper">
         <section class="box-links">
           <div class="box">
-            <h2 class="box-title"><a href="#">scroll<a></h2>
-            <img src="images/model.png" class="trio" alt="Hero Image"/>
+            <h2 class="box-title"><a href="index.html">scroll</a></h2>
+            <img src="images/model.png" class="trio" alt="Hero Image" />
           </div><!-- box -->
 
           <div class="box">
-            <h2 class="box-title"><a href="#">for<a></h2>
-          <img src="images/rapper.png" class="trio" alt="Hero Image"/>
+            <h2 class="box-title"><a href="index.html">for</a></h2>
+          <img src="images/rapper.png" class="trio" alt="Hero Image" />
           </div><!-- box -->
 
           <div class="box">
-            <h2 class="box-title"><a href="#">jokes<a></h2>
-          <img src="images/chef.png" class="trio" alt="Hero Image"/>
+            <h2 class="box-title"><a href="index.html">jokes</a></h2>
+          <img src="images/chef.png" class="trio" alt="Hero Image" />
           </div><!-- box -->
         </section>
       </div><!-- wrapper -->
@@ -74,23 +74,24 @@
 
 
 
-          <h3 class="joke">1. Did you hear about the fire at the circus?</h1>
+          <h3 class="joke">1. Did you hear about the fire at the circus?</h3>
           <p class="answer">It was in tents!</p>
 
-          <h3 class="joke">2. Do you want to hear a construction joke?</h1>
+          <h3 class="joke">2. Do you want to hear a construction joke?</h3>
           <p class="answer">Sorry, i'm still working on it.</p>
 
-          <h3 class="joke">3. Why should you never trust stairs?</h1>
+          <h3 class="joke">3. Why should you never trust stairs?</h3>
           <p class="answer">They’re always up to something.</p>
 
-          <h3 class="joke">4. What does a house wear?</h1>
+          <h3 class="joke">4. What does a house wear?</h3>
           <p class="answer">Address!</p>
 
-          <h3 class="joke">5. Want to hear a joke about a roof?</h1>
+          <h3 class="joke">5. Want to hear a joke about a roof?</h3>
           <p class="answer">The first one’s on the house.</p>
 
 
-          <h5 class="source"><span class="source-title">Source:</span>Liles, M. (2020, September 29). 101 Good, Clean Jokes That'll Make You Laugh Your Pants Off. <br> Retrieved from https://parade.com/1041830/marynliles/clean-jokes/</h4>
+          <h4 class="source"><span class="source-title">Source:</span>Liles, M. (2020, September 29). 101 Good, Clean Jokes That'll Make You Laugh Your Pants Off. <br> Retrieved from https://parade.com/1041830/marynliles/clean-jokes/</h4>
+            </section>
           </div>
     </main>
   </body>
