review and organize html/css code

--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
     <link rel="stylesheet" href="https://use.typekit.net/hbl5zip.css">
 
     <!-- Link to animation -->
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-      />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   </head>
+
   <body>
 
     <header>
@@ -59,12 +56,12 @@
 
           <div class="box">
             <h2 class="box-title"><a href="index.html">for</a></h2>
-          <img src="images/rapper.png" class="trio" alt="Hero Image" />
+            <img src="images/rapper.png" class="trio" alt="Hero Image" />
           </div><!-- box -->
 
           <div class="box">
             <h2 class="box-title"><a href="index.html">jokes</a></h2>
-          <img src="images/chef.png" class="trio" alt="Hero Image" />
+            <img src="images/chef.png" class="trio" alt="Hero Image" />
           </div><!-- box -->
         </section>
       </div><!-- wrapper -->
@@ -91,8 +88,8 @@
 
 
           <h4 class="source"><span class="source-title">Source:</span>Liles, M. (2020, September 29). 101 Good, Clean Jokes That'll Make You Laugh Your Pants Off. <br> Retrieved from https://parade.com/1041830/marynliles/clean-jokes/</h4>
-            </section>
-          </div>
+        </section>
+      </div>
     </main>
   </body>
 </html>
