revise structure for optimum performance

--- a/index.html
+++ b/index.html
@@ -50,46 +50,21 @@
       <div class="wrapper">
         <section class="box-links">
           <div class="box">
-            <h2 class="box-title"><a href="index.html">scroll</a></h2>
+            <h2 class="box-title"><a href="index.html">View</a></h2>
             <img src="images/model.png" class="trio" alt="Hero Image" />
           </div><!-- box -->
 
           <div class="box">
-            <h2 class="box-title"><a href="index.html">for</a></h2>
+            <h2 class="box-title"><a href="index.html">Listen</a></h2>
             <img src="images/rapper.png" class="trio" alt="Hero Image" />
           </div><!-- box -->
 
           <div class="box">
-            <h2 class="box-title"><a href="index.html">jokes</a></h2>
+            <h2 class="box-title"><a href="index.html">Taste</a></h2>
             <img src="images/chef.png" class="trio" alt="Hero Image" />
           </div><!-- box -->
         </section>
       </div><!-- wrapper -->
-
-      <div class="jokes-container">
-        <section class="jokes">
-
-
-
-          <h3 class="joke">1. Did you hear about the fire at the circus?</h3>
-          <p class="answer">It was in tents!</p>
-
-          <h3 class="joke">2. Do you want to hear a construction joke?</h3>
-          <p class="answer">Sorry, i'm still working on it.</p>
-
-          <h3 class="joke">3. Why should you never trust stairs?</h3>
-          <p class="answer">They’re always up to something.</p>
-
-          <h3 class="joke">4. What does a house wear?</h3>
-          <p class="answer">Address!</p>
-
-          <h3 class="joke">5. Want to hear a joke about a roof?</h3>
-          <p class="answer">The first one’s on the house.</p>
-
-
-          <h4 class="source"><span class="source-title">Source:</span>Liles, M. (2020, September 29). 101 Good, Clean Jokes That'll Make You Laugh Your Pants Off. <br> Retrieved from https://parade.com/1041830/marynliles/clean-jokes/</h4>
-        </section>
-      </div>
     </main>
   </body>
 </html>
